--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -107,14 +107,15 @@
     <h2>Portfolio Heading</h2>
 
     <div class="row">
+    <% @books.each do |book| %>
       <div class="col-lg-4 col-sm-6 portfolio-item">
         <div class="card h-100">
           <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="#">Project One</a>
+              <a href="#"><%= book.title %></a>
             </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur eum quasi sapiente nesciunt? Voluptatibus sit, repellat sequi itaque deserunt, dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
+            <p class="card-text"><%= book.story %></p>
           </div>
         </div>
       </div>
@@ -173,6 +174,7 @@
           </div>
         </div>
       </div>
+    <% end %>
     </div>
     <!-- /.row -->
 
