--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -110,7 +110,7 @@
     <% @books.each do |book| %>
       <div class="col-lg-4 col-sm-6 portfolio-item">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+          <a href="#"><%= image_tag "" %></a>
           <div class="card-body">
             <h4 class="card-title">
               <a href="#"><%= book.title %></a>
