--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,15 +18,18 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
+        <% if user_signed_in? %>
+          <li class="nav-item">
+            <a class="nav-link" ><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></a>
+          </li>
+        <% else %>
           <li class="nav-item">
           <a class="nav-link" ><%= link_to 'ログイン', new_user_session_path, method: :get %></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" ><%= link_to '新規登録', new_user_registration_path, method: :get %></a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li>
+        <% end %>
           
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
