--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -5,7 +5,10 @@
     </div>
     <br>
     <div class="login">
-        <input type="text" placeholder="username" name="user"><br>
-        <input type="password" placeholder="password" name="password"><br>
-        <input type="button" value="Login">
+    <%= form_with(model: @book, local: true) do |form| %>
+      <%= form.text_field :title, placeholder: "Title" %>
+      <%= form.text_area :story, placeholder: "Story", rows: "5" %>
+      <%= form.text_area :impression, placeholder: "text", rows: "5" %>
+      <%= form.submit "SEND" %>
+    <% end %>
     </div>
