--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,9 @@
           <li class="nav-item">
             <a class="nav-link" ><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" ><%= link_to '新規投稿', new_book_path, method: :get %></a>
+          </li>
         <% else %>
           <li class="nav-item">
           <a class="nav-link" ><%= link_to 'ログイン', new_user_session_path, method: :get %></a>
