画像の表示

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -56,7 +56,7 @@
     <% @books.each do |book| %>
       <div class="col-lg-4 col-sm-6 portfolio-item">
         <div class="card h-100">
-          <a href="#"><%= image_tag "" %></a>
+          <%= image_tag book.image, class: "item-img" if book.image.attached? %>
           <div class="card-body">
             <h4 class="card-title">
               <a href="#"><%= book.title %></a>
