編集機能　実装

--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="bodys"></div>
     <div class="grad"></div>
     <div class="headers">
-      <div><span>新規投稿</span></div>
+      <div><span>編集</span></div>
     </div>
     <br>
     <div class="login">
