--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,9 @@
         <ul class="navbar-nav ml-auto">
         <% if user_signed_in? %>
           <li class="nav-item">
+            <a class="nav-link" ><%= link_to "マイページ", "/users/#{current_user.id}" %></a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" ><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></a>
           </li>
           <li class="nav-item">
