--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -69,6 +69,9 @@
             </h4>
             <p class="card-text"><%= book.story %></p>
           </div>
+            <a href="/users/<%= book.user.id %>">
+             <span>投稿者</span><%= book.user.nickname %>
+            </a>
         </div>
       </div>
       
