--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -56,12 +56,14 @@
     <% @books.each do |book| %>
       <div class="col-lg-4 col-sm-6 portfolio-item">
         <div class="card h-100">
+        <% if user_signed_in? && current_user.id == book.user_id %>
           <li>
             <%= link_to '編集', edit_book_path(book.id), method: :get %>
           </li>
           <li>
             <%= link_to '削除', book_path(book.id), method: :delete %>
           </li>
+        <% end %>
           <%= image_tag book.image, class: "item-img" if book.image.attached? %>
           <div class="card-body">
             <h4 class="card-title">
