--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -69,7 +69,12 @@
             <h4 class="card-title">
               <a href="#"><%= book.title %></a>
             </h4>
-            <p class="card-text"><%= book.story %></p>
+            <div class="card-story">
+              <p><%= book.story %></p>
+            </div>
+            <div class="card-impression">
+              <p><%= book.impression %></p>
+            </div>
           </div>
             <a href="/users/<%= book.user.id %>">
              <span>投稿者</span><%= book.user.nickname %>
