--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -67,7 +67,7 @@
           <%= image_tag book.image, class: "item-img" if book.image.attached? %>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="#"><%= book.title %></a>
+              <%= link_to book.title, book_path(book.id), method: :get %>
             </h4>
             <div class="card-story">
               <p><%= book.story %></p>
