--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -185,24 +185,28 @@ bodys{
 }
 
 .item-img {
-  width: 348px;
+  width: 100%;
   height: 35vh;
+  margin-bottom: 10px;
 }
 
 .card-body{
-  height: 450px;
+  height: 800px;
 }
 
 .card-title{
-  background: #3cb3e4;
-  padding: 5px 15px;
-  border-radius: 0 10px 0 10px;
-  color: #fff;
+  color: #00BCD4;
+  text-shadow: 2px 2px #fff, 5px 5px rgba(0, 188, 212, 0.4);
+  font-size: 1.5em;
+  padding: 5px;
+  border-left: 10px solid #666;
+  border-bottom: 2px dotted #ccc;
+
 }
 
 .card-story{
   padding: 0.5em 1em;
-  margin:  2em 0;
+  margin:  0 0 2em 0;
   border: double 5px #4ec4d3;
   height: 150px;
   overflow: scroll;
@@ -215,7 +219,7 @@ bodys{
 
 .card-impression{
   padding: 0.5em 1em;
-  margin:  2em 0;
+  margin:  0 0 2em 0;
   border: double 5px #4ec4d3;
   height: 150px;
   overflow: scroll;
@@ -224,4 +228,15 @@ bodys{
 .card-impression p{
   margin: 0;
   padding: 0;
+}
+
+.caption{
+  color: #fff;
+  text-shadow: 1px 1px 1px #555, -1px 1px 1px #555, 1px -1px 1px #555, -1px -1px 1px #555, 1px 1px 1px #555, -1px 1px 1px #555, 1px -1px 1px #555, -1px -1px 1px #555, 5px 5px #9ccc65;
+  transform: rotate(-4deg);
+}
+
+.carousel-caption {
+  color: #fff;
+    text-shadow: 1px 1px 1px #ff9800, -1px 1px 1px #ff9800, 1px -1px 1px #ff9800, -1px -1px 1px #ff9800, 1px 1px 1px #ff9800, -1px 1px 1px #ff9800, 1px -1px 1px #ff9800, -1px -1px 1px #ff9800;
 }
