--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -9,14 +9,16 @@
             <%= link_to '削除', book_path(@book.id), method: :delete %>
           </li>
         <% end %>
-          <%= image_tag @book.image, class: "item-img" if @book.image.attached? %>
           <div class="card-body">
+            <%= image_tag @book.image, class: "item-img" if @book.image.attached? %>
             <h4 class="card-title">
-              <a href="#"><%= @book.title %></a>
+              <%= link_to @book.title, book_path(@book.id), method: :get %>
             </h4>
+            <p class="caption">story<p>
             <div class="card-story">
               <p><%= @book.story %></p>
             </div>
+            <p class="caption">impression<p>
             <div class="card-impression">
               <p><%= @book.impression %></p>
             </div>
