ログイン・新規登録　幅調節

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -240,3 +240,9 @@ bodys{
   color: #fff;
     text-shadow: 1px 1px 1px #ff9800, -1px 1px 1px #ff9800, 1px -1px 1px #ff9800, -1px -1px 1px #ff9800, 1px 1px 1px #ff9800, -1px 1px 1px #ff9800, 1px -1px 1px #ff9800, -1px -1px 1px #ff9800;
 }
+
+.nav-item{
+  margin-right: 20px;
+  text-align: center;
+}
+
