編集・削除機能　装飾

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,14 +1,7 @@
 <div class="row">
       <div class="col-lg-4 col-sm-6 portfolio-item">
         <div class="card h-100">
-        <% if user_signed_in? && current_user.id == @book.user_id %>
-          <li>
-            <%= link_to '編集', edit_book_path(@book.id), method: :get %>
-          </li>
-          <li>
-            <%= link_to '削除', book_path(@book.id), method: :delete %>
-          </li>
-        <% end %>
+        
           <div class="card-body">
             <%= image_tag @book.image, class: "item-img" if @book.image.attached? %>
             <h4 class="card-title">
@@ -22,6 +15,15 @@
             <div class="card-impression">
               <p><%= @book.impression %></p>
             </div>
+            <% if user_signed_in? && current_user.id == @book.user_id %>
+            <div class="cp_navi">
+            <ul class="menu-bars">
+              <li class="menu-bar"><%= link_to '編集', edit_book_path(@book.id), method: :get %></li>
+              <li class="menu-bar"><%= link_to '削除', book_path(@book.id), method: :delete %></li>
+             
+            </ul>
+            </div>
+            <% end %>
             <div class="container">
               <% if user_signed_in? %>
                 <%= form_with(model: [@book, @comment], local: true) do |form| %>
@@ -29,10 +31,10 @@
                   <%= form.submit "SEND" %>
                 <% end %>
               <% else %>
-                <strong><p>※ コメントの投稿には新規登録/ログインが必要です ※</p></strong>
+                <strong><p class="comment-warning">※コメントの投稿には新規登録/ログインが必要です※</p></strong>
               <% end %>
               <div class="comments">
-                <h4>＜コメント一覧＞</h4>
+                <p class="caption">comment<p>
                 <% @comments.each do |comment| %>
                   <p>
                     <strong><%= link_to comment.user.nickname, "/users/#{comment.user_id}" %>：</strong>
