--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -27,6 +27,12 @@
 
     <!-- Portfolio Section -->
     <h2>Portfolio Heading</h2>
+    
+      <%= form_with(url: search_books_path, local: true, method: :get, class: "search-form") do |form| %>
+      <%= form.text_field :keyword, placeholder: "投稿を検索する", class: "search-input" %>
+      <%= form.submit "検索", class: "search-btn" %>
+      <% end %>
+
 
     <div class="row">
     <% @books.each do |book| %>
