いいね機能実装

--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -23,6 +23,8 @@
             </ul>
             </div>
             <% end %>
+            <%= render 'likes/like', book: book %>
+
           </div>
         </div>
       </div>
