--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,9 +1,11 @@
 <div class="login">
     <%= form_with(model: book, local: true) do |form| %>
       <%= form.file_field :image, class: 'hidden' %>
+      <div id="image-list"></div>
       <%= form.text_field :title, placeholder: "Title" %>
       <%= form.text_area :story, placeholder: "Story", rows: "5" %>
       <%= form.text_area :impression, placeholder: "text", rows: "5" %>
       <%= form.submit "SEND" %>
+      
     <% end %>
     </div>
