楽天API導入・表示

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -22,6 +22,9 @@
   <!-- Page Content -->
   <div class="container">
 
+    <%= link_to "楽天で検索", goods_search_path, method: :get %>
+
+
     <h1 class="my-4">投稿一覧</h1>
 
 
@@ -115,6 +118,9 @@
   <footer class="py-5 bg-dark">
     <div class="container">
       <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
+      <!-- Rakuten Web Services Attribution Snippet FROM HERE -->
+<a href="https://webservice.rakuten.co.jp/" target="_blank">Supported by Rakuten Developers</a>
+<!-- Rakuten Web Services Attribution Snippet TO HERE -->
     </div>
     <!-- /.container -->
   </footer>
