楽天API　バリデーション設定

--- a/app/views/goods/search.html.erb
+++ b/app/views/goods/search.html.erb
@@ -8,6 +8,7 @@
       <% end %>
   </div>
   <h2>検索結果</h2>
+  <%= flash[:danger] %>
   <div id='good_list'>
      <%= render partial: 'good_list' %>
   </div>
