一覧・詳細・検索ページ背景画像追加

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -20,6 +20,7 @@
   </header>
 
   <!-- Page Content -->
+<div class="backimg">
   <div class="container">
 
     <%= link_to "楽天で検索", goods_search_path, method: :get %>
@@ -112,6 +113,7 @@
     </div>
 
   </div>
+</div>
   <!-- /.container -->
 
   <!-- Footer -->
