--- a/app/views/books/search.html.erb
+++ b/app/views/books/search.html.erb
@@ -1,3 +1,4 @@
+<div class="backimg">
 <%= form_with(url: search_books_path, local: true, method: :get, class: "search-form") do |form| %>
   <%= form.text_field :keyword, placeholder: "投稿を検索する", class: "search-input" %>
   <%= form.submit "検索", class: "search-btn" %>
@@ -7,4 +8,5 @@
     <% @books.each do |book| %>
       <%= render partial: "book", locals: { book: book } %>
     <% end %>
+ </div>
  </div>
