--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,38 +1,12 @@
-<div class="bodys"></div>
-    <div class="grad"></div>
-    <div class="headers">
-      <div><span>新規登録</span></div>
-    </div>
-    <br>
-    <div class="login">
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-        <%= render 'devise/shared/error_messages', model: f.object %>
-
-          <div class="field">
-            <%= f.label :nickname %> <em>(6 characters maximum)</em><br />
-            <%= f.text_field :nickname, autofocus: true %>
-          </div>
-          
-          <div class="field">
-            <%= f.label :email %><br />
-            <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-          </div>
-
-          <div class="field">
-            <%= f.label :password %>
-            <% if @minimum_password_length %>
-            <em>(<%= @minimum_password_length %> characters minimum)</em>
-            <% end %><br />
-            <%= f.password_field :password, autocomplete: "new-password" %>
-          </div>
-
-          <div class="field">
-            <%= f.label :password_confirmation %><br />
-            <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-          </div>
-
-          <div class="actions">
-            <%= f.submit "Sign up" %>
-          </div>
-      <% end %>
-    </div>
+<div class="main">
+  <p class="sign" align="center">新規登録</p>   
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= render 'devise/shared/error_messages', model: f.object %>
+    <form class="form1">
+      <%= f.text_field :nickname, class:"un", autofocus: true,placeholder:"Nickname" %>
+      <%= f.email_field :email, class:"un", autofocus: true, autocomplete: "email",placeholder:"Email" %>
+      <%= f.password_field :password, class:"pass", autocomplete: "current-password",placeholder:"Password"  %>
+      <%= f.password_field :password_confirmation, class:"pass", autocomplete: "new-password",placeholder:"Password_confirmation" %>
+      <%= f.submit "Sign up", class:"submit" %>
+  <% end %>
+</div>
