--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,7 +1,4 @@
-<div class="bodys"></div>
-    <div class="grad"></div>
-    <div class="headers">
-      <div><span>編集</span></div>
-    </div>
-    <br>
-    <%= render partial: "form", locals: { book: @book } %>
+ <div class="main">
+  <p class="sign" align="center">編集</p> 
+  <%= render partial: "form", locals: { book: @book } %>
+</div>
