トップページ　画像変更

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -6,7 +6,7 @@
       <div class="carousel-inner" role="listbox">
         <!-- Slide One - Set the background image for this slide in the line below -->
         <div> 
-        <%= image_tag "susan-yin-2JIvboGLeho-unsplash.jpg", class: "carousel-item active" %>
+        <%= image_tag "kermit-1673468_1920.jpg", class: "carousel-item active" %>
           
           <div class="carousel-caption">
             <h3>新たな絵本との出会い</h3>
