背景画像URL　本番環境用変更

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -251,7 +251,7 @@ html{
 
 body {
   font-family: 'Ubuntu', sans-serif;
-  background: linear-gradient(to top, rgba(217, 175, 217, 0.7) 0%, rgba(151, 217, 225, 0.7) 100%),url(susan-yin-2JIvboGLeho-unsplash.jpg);
+  background: linear-gradient(to top, rgba(217, 175, 217, 0.7) 0%, rgba(151, 217, 225, 0.7) 100%),image-url("susan-yin-2JIvboGLeho-unsplash.jpg");
   background-size: cover;
 }
 
