投稿検索フォームデザイン　編集

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -226,6 +226,38 @@
 }
 
 // 検索フォーム↓↓↓
+.search-form{
+  margin: 10px 0 15px;
+}
+.search-input{
+left:0;
+top:0; 	
+outline:0;/*クリック時の青い枠線消す*/	
+height:50px;/*検索ボックスの高さ*/	
+padding:0 10px;/*テキスト位置調整*/	 
+border-radius:2px 0 0 2px;/*検索ボックスの角を丸める*/		
+background:#eee;/*検索ボックスの背景カラー*/
+border-color: #ccc;
+}
+
+.search-btn{
+  width:70px;
+  height:50px;
+  
+  left:280px; 
+  top:0;
+  border-radius:2px;
+  background:#7fbfff;
+  color:#fff;
+  font-weight:bold;
+  font-size:16px;
+  border:none;
+}
+.search-btn:hover{
+  background:#eee;
+color:#7fbfff;
+}
+
 // いいね機能↓↓↓
 .iine__button{
   background: linear-gradient(to right, #feb400, #FFE300);
