--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -413,3 +413,82 @@ a {
   text-align: center;
 
 }
+
+// 楽天リンク
+
+.rakuten {
+	position: relative;
+	display: inline-block;
+	padding: 0.1em 0.3em;
+	text-decoration: none;
+  color: #3949AB;
+  font-size: 20px;
+}
+.rakuten:after,
+.rakuten::before {
+	position: absolute;
+	bottom: 0;
+	content: '';
+	transition: all 0.3s ease;
+}
+.rakuten:after {
+	right: 50%;
+	left: 50%;
+	width: 0;
+	height: 100%;
+	border-radius: 3px;
+	background-color: #3949AB;
+}
+.rakuten::before {
+	left: 0;
+	width: 100%;
+	height: calc(100% - 2px);
+	border-top: 1px solid #3949AB;
+	border-bottom: 1px solid #3949AB;
+}
+.rakuten:hover:after {
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	opacity: 0.3;
+}
+.rakuten:hover::before {
+	right: 50%;
+	left: 50%;
+	width: 0%;
+}
+
+h1 {
+  margin-top: 30px;
+  position: relative;
+  padding-bottom: 5px;
+  font-size:4em;
+  text-align:center;
+  line-height:0.95em;
+  font-weight:bold;
+  color: #03ecf4;
+  text-shadow: 
+    0.04em 0.02em 0 #8ac1dd, 
+    0.08em 0.05em 0 rgba(0, 0, 0, 0.6);
+  }
+  
+  h1:after {
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+  content: '';
+  height: 6px;
+  width: 100%;
+  background: -webkit-repeating-linear-gradient(45deg, #fff, #fff 2px, #000 2px, #000 4px);
+  background: repeating-linear-gradient(45deg, #fff, #fff 2px, #000 2px, #000 4px);
+  }
+
+// 楽天検索ページ
+  .sample{
+    font-size:30px;
+    line-height:0.95em;
+    font-weight:bold;
+    color: #FFAB91;
+    text-shadow: 0.02em 0.02em 0.02em rgba(0,0,0,1);
+  }
