--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -23,14 +23,14 @@
 <div class="backimg">
   <div class="container">
 
-    <%= link_to "楽天で検索", goods_search_path, method: :get %>
+    <%= link_to "楽天で検索", goods_search_path, method: :get,class: :rakuten %>
 
 
     <h1 class="my-4">投稿一覧</h1>
 
 
     <!-- Portfolio Section -->
-    <h2>Portfolio Heading</h2>
+
     
       <%= form_with(url: search_books_path, local: true, method: :get, class: "search-form") do |form| %>
       <%= form.text_field :keyword, placeholder: "投稿を検索する", class: "search-input" %>
