--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -45,12 +45,13 @@
 
 .item-img {
   width: 100%;
-  height: 35vh;
+  height: 25vh;
   margin-bottom: 10px;
 }
 
 .card-body{
   height: 100%;
+  background: image-url("diego-ph-5LOhydOtTKU-unsplash.jpg");
 }
 
 .card-title{
@@ -67,7 +68,7 @@
   padding: 0.5em 1em;
   margin:  0 0 2em 0;
   border: double 5px #4ec4d3;
-  height: 150px;
+  height: 100px;
   overflow: scroll;
 }
 
@@ -80,7 +81,7 @@
   padding: 0.5em 1em;
   margin:  0 0 2em 0;
   border: double 5px #4ec4d3;
-  height: 150px;
+  height: 100px;
   overflow: scroll;
 }
 
@@ -131,7 +132,26 @@
   padding-top: 10px;
 }
 .backimg{
-  background: linear-gradient(-225deg, #2CD8D5 0%, #C5C1FF 56%, #FFBAC3 100%);
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  
+  background: linear-gradient(to bottom, #c8df7f 0%, #b88084 100%);
+  animation: huerotator 10s infinite alternate;
+}
+
+@keyframes huerotator {
+  0% {
+    -webkit-filter: hue-rotate(0deg);
+    filter: hue-rotate(0deg);
+  }
+
+  100% {
+    -webkit-filter: hue-rotate(360deg);
+    filter: hue-rotate(360deg);
+  }
 }
 // menu bar↓↓↓
 
@@ -463,7 +483,7 @@ h1 {
   margin-top: 30px;
   position: relative;
   padding-bottom: 5px;
-  font-size:4em;
+  font-size:2em;
   text-align:center;
   line-height:0.95em;
   font-weight:bold;
