--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,4 +1,4 @@
-<div class="backimg">
+ <h1 class="my-4"><%= @title %></h1>
 <div class="row">
       <div class="col-lg-4 col-sm-6 portfolio-item">
         <div class="card h-100">
@@ -50,5 +50,4 @@
       </div>
       
       
-</div>
 </div>
